--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
         	</div>
         </div>
 
+        <script src="js/es6-promise.auto.js"></script>
         <script src="https://unpkg.com/vue"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <!--<script src="js/app.js"></script>-->
